2011-05-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * audioio-device.h (stop): add drain parameter
        * library interface version to 23:0:0

2009-10-17  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 22:0:0 frozen (2.7.0 release)

2009-10-04  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* samplebuffer_functions.h (is_almost_equal): Added
	parameters. New signature still source-compatible with
	the old one.

2009-04-18  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.h: File removed, ECA_CONTROL_BASE
	combined into ECA_CONTROL and defined in eca-control.h.
	* eca-control-objects.h: File removed, ECA_CONTROL_OBJECTS
	combined into ECA_CONTROL and defined in eca-control.h.
	* eca-control-main.h: File added. A new abstract interface
	class defining a minimal public interface to ECA_CONTROL.
	* eca-control-mt.h: File added.
	* eca-control.h: Updated signature for command() and 
	command_float_arg().
	* eca-control.h: Moved various members functions, not part
	of the functionality set defined by ECA_CONTROL_MAIN, to
	private visibility scope.
	
2009-04-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.h: Added get_chain_index().
	* eca-control-objects.h: get_connected_chainsetup() added.
	* eca-chain.h: New signature for set_parameter().
	* eca-engine.h: Added new type ECA_ENGINE::complex_command_t and
	new enum type ECA_ENGINE::ep_exec_edit. Removed enum types 
	ECA_ENGINE::ep_ctrl_* and ECA_ENGINE::ep_cop_*.

2009-04-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chain.h: Added member function number_of_chain_operator_parameters().
	* eca-osc.h: File added.

2009-04-10  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* audiofx_amplitude.h: Added EFFECT_AMPLIFY::process_ref(),
	EFFECT_AMPLIFY_DB::process_ref(), EFFECT_AMPLIFY_CHANNEL::process_ref()
	and EFFECT_NORMAL_PAN::process_ref().
	* samplebuffer_functions.h: Added fill_with_random_samples(), 
	is_almost_equal().

2009-04-04  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
