@@ -1,3 +1,7 @@
+2011-05-04  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+        * eca-engine.h (Engine_command): added 'ep_stop_with_drain'
+
 2011-05-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
         * audioio-device.h (stop): add drain parameter
